--- a/Project_WPF/Project_WPF/TestWindow.xaml
+++ b/Project_WPF/Project_WPF/TestWindow.xaml
@@ -6,13 +6,13 @@
         xmlns:local="clr-namespace:Project_WPF"
         mc:Ignorable="d"
         Title="TestWindow" Height="600" Width="1000">
-    <Grid Margin="10">
+    <Grid x:Name="grid" Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="20*"/>
+            <ColumnDefinition Width="30*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="5*"/>
@@ -20,19 +20,29 @@
             <RowDefinition Height="5*"/>
             <RowDefinition Height="1.5*"/>
         </Grid.RowDefinitions>
-        <Button x:Name="test" Content="Ответить" Grid.Column="1" HorizontalAlignment="Left" Margin="10.4,10,0,0" Grid.Row="5" VerticalAlignment="Top" Width="75" Click="test_Click"/>
-        <Button x:Name="exit" Content="Выход" Grid.Column="2" HorizontalAlignment="Left" Margin="689.4,10,0,0" Grid.Row="5" VerticalAlignment="Top" Width="75" Click="exit_Click"/>
-        <RadioButton x:Name="radBut1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,75.2,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-        <RadioButton x:Name="radBut2" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,70.8,0,0" Grid.Row="3" VerticalAlignment="Top"/>
-        <RadioButton x:Name="radBut3" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,72.4,0,0" Grid.Row="4" VerticalAlignment="Top"/>
-        <ListBox x:Name="lb_quest" Grid.RowSpan="2" Grid.Column="2" ItemsSource="{Binding}"/>
-        <TextBox x:Name="lb_answer1" Grid.Row="2"  Grid.Column="1" Grid.ColumnSpan="3" Margin="2"/>
-        <ListBox x:Name="lb_answer2" Grid.Row="3"  Grid.Column="1" Grid.ColumnSpan="3" Margin="2"/>
-        <ListBox x:Name="lb_answer3" Grid.Row="4"  Grid.Column="1" Grid.ColumnSpan="3" Margin="2"/>
-        <TextBox Grid.Column="1" Grid.Row="0" TextAlignment="Center"  Text="Верно" />
-        <TextBox Grid.Column="1" Grid.Row="1" TextAlignment="Center" Text="Ошибка" />
-        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="30" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="42" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="textBox2_Copy" HorizontalAlignment="Left" Height="31" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="42" Margin="0,30,0,0" Grid.ColumnSpan="2" RenderTransformOrigin="0.475,1.657" Grid.RowSpan="2"/>
+
+        <StackPanel x:Name="stackPanel" Grid.ColumnSpan="2" Orientation="Horizontal">
+            <TextBox Text="Выберите вариант для тренировки   "/>
+            <ComboBox Name="cbVar" SelectionChanged ="ComboBox_Selected" Width="30"/>
+           
+            <TextBlock Text="   Вопрос "/>
+            <TextBox x:Name="tbNTicket" Width="30" Text="{Binding Mode=OneWay}"/>
+            <TextBlock HorizontalAlignment="Center" Text="        Верных ответов" Width="120" Foreground="Green"/>
+            <TextBox x:Name="tbTr" Width="30" Foreground="Green" Text="{Binding Mode=OneWay}"/>
+            <TextBlock HorizontalAlignment="Center" Text="  Неверных ответов  " Foreground="Red"/>
+            <TextBox x:Name="tbFls" Width="30" Foreground="Red" Text="{Binding Mode=OneWay}"/>
+        </StackPanel>
+
+        <Button x:Name="test" Content="Ответить" Grid.Column="1" HorizontalAlignment="Left" Margin="10.2,10.4,0,0" Grid.Row="6" VerticalAlignment="Top" Width="75" Click="test_Click" Grid.ColumnSpan="1" Height="19"/>
+        <Button x:Name="exit" Content="Выход" Grid.Column="1" HorizontalAlignment="Left" Margin="686.4,10.4,0,0" Grid.Row="6" VerticalAlignment="Top" Width="75" Click="exit_Click" Height="19"/>
+        <RadioButton x:Name="radBut1" GroupName="test" IsChecked="True" HorizontalAlignment="Left" Margin="10,74.8,0,0" Grid.Row="3" VerticalAlignment="Top" Height="14" Width="15"/>
+        <RadioButton x:Name="radBut2" GroupName="test" HorizontalAlignment="Left" Margin="10,71,0,0" Grid.Row="4" VerticalAlignment="Top" Height="13" Width="15"/>
+        <RadioButton x:Name="radBut3" GroupName="test" HorizontalAlignment="Left" Margin="10,72.2,0,0" Grid.Row="5" VerticalAlignment="Top" Height="14" Width="15"/>
+        <ListBox x:Name="lb_quest" Grid.Row="1" Grid.RowSpan="2" Grid.Column="1" ItemsSource="{Binding}" Margin="1.4,0,-0.4,0.2"/>
+        <TextBox x:Name="lb_answer1" Grid.Row="3"  Grid.Column="1" Grid.ColumnSpan="2" Margin="2.2,1.8,1.6,2"/>
+        <ListBox x:Name="lb_answer2" Grid.Row="4"  Grid.Column="1" Grid.ColumnSpan="2" Margin="2.2,2,1.6,1.8"/>
+        <ListBox x:Name="lb_answer3" Grid.Row="5"  Grid.Column="1" Grid.ColumnSpan="2" Margin="2.2,2.2,1.6,1.6"/>
+
 
     </Grid>
 </Window>
