--- a/Project_WPF/Project_WPF/TestWindow.xaml
+++ b/Project_WPF/Project_WPF/TestWindow.xaml
@@ -5,16 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project_WPF"
         mc:Ignorable="d"
-        Title="TestWindow" Height="600" Width="1000">
-    <Grid x:Name="grid" Margin="10">
+        Title="TestWindow" Height="600" Width="1000" Background="#FF61C2F4">
+    <Window.Resources>
+        <Style x:Key="Front">
+            <Setter Property="Control.FontSize" Value="16" />
+        </Style>
+    </Window.Resources>
+
+    <Grid x:Name="grid" Margin="10,10,20,10" Style="{StaticResource Front}" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="30*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="4*"/>
             <RowDefinition Height="5*"/>
             <RowDefinition Height="5*"/>
             <RowDefinition Height="5*"/>
@@ -22,30 +27,29 @@
         </Grid.RowDefinitions>
 
         <StackPanel x:Name="stackPanel" Grid.ColumnSpan="2" Orientation="Horizontal">
-            <TextBox Text="Выберите вариант для тренировки   "/>
+            <TextBox Text="      Выберите вариант для тренировки   " />
             <ComboBox Name="cbVar" SelectionChanged ="ComboBox_Selected" Width="60">
                 <ComboBoxItem  Content="1"/>
-                <ComboBoxItem  Content="2"/>
-                <ComboBoxItem  Content="3"/>
+                <ComboBoxItem  Content="2"/>               
             </ComboBox>
 
-            <TextBlock Text="   Вопрос "/>
+            <TextBlock Text="   Вопросов "/>
             <TextBox x:Name="tbNTicket" Width="30" Text="{Binding Mode=OneWay}"/>
-            <TextBlock HorizontalAlignment="Center" Text="        Верных ответов" Width="120" Foreground="Green"/>
+            <TextBlock HorizontalAlignment="Center" Text="        Верных ответов  " Foreground="Green"/>
             <TextBox x:Name="tbTr" Width="30" Foreground="Green" Text="{Binding Mode=OneWay}"/>
             <TextBlock HorizontalAlignment="Center" Text="  Неверных ответов  " Foreground="Red"/>
             <TextBox x:Name="tbFls" Width="30" Foreground="Red" Text="{Binding Mode=OneWay}"/>
         </StackPanel>
 
-        <Button x:Name="test" Content="Ответить" Grid.Column="1" HorizontalAlignment="Left" Margin="10.2,10.4,0,0" Grid.Row="6" VerticalAlignment="Top" Width="75" Click="test_Click" Grid.ColumnSpan="1" Height="19"/>
-        <Button x:Name="exit" Content="Выход" Grid.Column="1" HorizontalAlignment="Left" Margin="686.4,10.4,0,0" Grid.Row="6" VerticalAlignment="Top" Width="75" Click="exit_Click" Height="19"/>
-        <RadioButton x:Name="radBut1" GroupName="_test" IsChecked="True" HorizontalAlignment="Left" Margin="10,74.8,0,0" Grid.Row="3" VerticalAlignment="Top" Height="14" Width="15"/>
-        <RadioButton x:Name="radBut2" GroupName="_test" HorizontalAlignment="Left" Margin="10,71,0,0" Grid.Row="4" VerticalAlignment="Top" Height="13" Width="15"/>
-        <RadioButton x:Name="radBut3" GroupName="_test" HorizontalAlignment="Left" Margin="10,72.2,0,0" Grid.Row="5" VerticalAlignment="Top" Height="14" Width="15"/>
-        <TextBox x:Name="tb_quest" Grid.Row="1" Grid.RowSpan="2" Grid.Column="1" VerticalAlignment="Center"  TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
-        <TextBox x:Name="tb_answer1" Grid.Row="3"  Grid.Column="1" VerticalAlignment="Center"  TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
-        <TextBox x:Name="tb_answer2" Grid.Row="4"  Grid.Column="1" VerticalAlignment="Center"  TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
-        <TextBox x:Name="tb_answer3" Grid.Row="5"  Grid.Column="1" VerticalAlignment="Center"  TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
+        <Button x:Name="test" Content="Ответить" Grid.Column="1" HorizontalAlignment="Left" Margin="90.8,10,0,0" Grid.Row="5" VerticalAlignment="Top" Width="100" Click="test_Click" Grid.ColumnSpan="1" Height="25"/>
+        <Button x:Name="exit" Content="Выход" Grid.Column="1" HorizontalAlignment="Left" Margin="686.4,10.4,0,0" Grid.Row="5" VerticalAlignment="Top" Width="100" Click="exit_Click" Height="25"/>
+        <RadioButton x:Name="radBut1" GroupName="_test" IsChecked="True" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="14" Width="15"/>
+        <RadioButton x:Name="radBut2" GroupName="_test" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="13" Width="15"/>
+        <RadioButton x:Name="radBut3" GroupName="_test" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Height="14" Width="15"/>
+        <TextBox x:Name="tb_quest" Height="60" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center"  TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Margin="0,20,0,0" Background="#FFCDE4FC"/>
+        <TextBox x:Name="tb_answer1" Height="70" Grid.Row="2"  Grid.Column="1" VerticalAlignment="Center"  TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Background="#FFCDE4FC"/>
+        <TextBox x:Name="tb_answer2" Height="70" Grid.Row="3"  Grid.Column="1" VerticalAlignment="Center"  TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Background="#FFCDE4FC"/>
+        <TextBox x:Name="tb_answer3" Height="70" Grid.Row="4"  Grid.Column="1" VerticalAlignment="Center"  TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Background="#FFCDE4FC"/>
 
 
     </Grid>
