--- a/Project_WPF/Project_WPF/StartWindow.xaml
+++ b/Project_WPF/Project_WPF/StartWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project_WPF"
         mc:Ignorable="d"
-        Title="StartWindow" Height="600" Width="1000">
+        Title="StartWindow" Height="600" Width="1000" Background="LightSeaGreen">
     <Grid Margin="20">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
